--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
         "vue-tsc": "^2.2.4"
     },
     "dependencies": {
+        "@fortawesome/free-regular-svg-icons": "^7.1.0",
+        "@fortawesome/free-solid-svg-icons": "^7.1.0",
+        "@fortawesome/vue-fontawesome": "^3.1.3",
         "@inertiajs/vue3": "^2.3.7",
         "@tailwindcss/vite": "^4.1.11",
         "@vitejs/plugin-vue": "^6.0.0",
